data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2266.wast
;; 7. **Test Description**: Define a block with a conditionally terminated sequence using `br_if` where the condition is derived from indirect memory access operations.    - **Constraint Checked**: Ensures memory access operations feed the condition accurately for `br_if`.    - **Relation to Condition Evaluation**: Incorrect memory handling or condition checks may result in unintended branches.

(assert_invalid
  (module (memory (export "mem") 1)
    (func (param i32) (result i32)
      (block (result i32)
        (i32.load (local.get 0))
        (br_if 0 (i32.eqz)))
      (i32.const 1))
  )
  "type mismatch"
)